# ractor-wormhole

./: Cargo.toml  README.md  braindump.md  build-crates-individually.ps1  build-crates-individually.sh  prompt.txt  shell.nix  todo.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.render/: build.sh  start.sh
chat_app/: README.md
chat_app/client/: Cargo.toml
chat_app/client/src/: main.rs  ui.rs
chat_app/server/: Cargo.toml
chat_app/server/src/: alias_gen.rs  chat_server.rs  http_server.rs  hub.rs  lib.rs  main.rs
chat_app/shared/: Cargo.toml
chat_app/shared/src/: lib.rs
chat_app/wasm_client/: .gitignore  Cargo.toml  README.md
chat_app/wasm_client/.cargo/: config.toml
chat_app/wasm_client/assets/: sw.js
chat_app/wasm_client/src/: app.rs  main.rs
chat_app/wasm_server/: Cargo.toml  __build.rs
chat_app/wasm_server/src/: embedded_files.rs  main.rs
ractor_wormhole/: Cargo.toml
ractor_wormhole/src/: gateway.rs  lib.rs  nexus.rs  portal.rs  serialization.rs  util.rs
ractor_wormhole/src/conduit/: mod.rs  websocket.rs
ractor_wormhole/src/conduit/ssh/: README.md  client.rs  mod.rs
ractor_wormhole/src/conduit/unix_socket/: client.rs  mod.rs  server.rs
ractor_wormhole/src/conduit/websocket/: client.rs  mod.rs  server.rs
ractor_wormhole/src/conduit/websocket/client/: ewebsock.rs  mod.rs  tokio_tungstenite.rs
ractor_wormhole/src/conduit/websocket/server/: mod.rs  tokio_tungstenite.rs
ractor_wormhole/src/serialization/: default_impl_tupl.rs  default_implementations.rs  internal_serializations.rs  mod.rs  rpc_proxy.rs  util.rs
ractor_wormhole/src/transmaterialization/: default_impl_tupl.rs  default_implementations.rs  internal_serializations.rs  mod.rs  rpc_proxy.rs  util.rs
ractor_wormhole/src/util/: ask.rs  function_actor.rs  map.rs  mod.rs  thread_local_function_actor.rs
ractor_wormhole/src/util/combinators/: filter.rs  filter_map.rs  map.rs  mod.rs
ractor_wormhole_base/: Cargo.toml
ractor_wormhole_base/src/: lib.rs
ractor_wormhole_derive/: Cargo.toml
ractor_wormhole_derive/src/: derive_generate_deps.rs  derive_wormhole_serializable.rs  lib.rs  util.rs
ractor_wormhole_tests/: Cargo.toml
ractor_wormhole_tests/src/: derive_error_tests.rs  derive_tests.rs  lib.rs  portal_isolation.rs  readme.rs  remote_linking.rs  tiny_wormhole.rs
sample_app/: Cargo.toml  README.md
sample_app/src/: client.rs  common.rs  main.rs  server.rs
sample_app/src/client/: connection.rs  mod.rs
sample_app/src/server/: alias_gen.rs  connection.rs  mod.rs
simple_gateway/: Cargo.toml
simple_gateway/src/: main.rs
uniffi_test/: .gitignore  shell.nix
uniffi_test/kotlin_client/: build.gradle.kts  run.sh
uniffi_test/kotlin_client/src/main/kotlin/: Main.kt  WebSocketServer.kt  WebSocketTransport.kt
uniffi_test/rust_project/: Cargo.toml  build.rs
uniffi_test/rust_project/src/: callbacks.rs  error.rs  ffi_actors.rs  ffi_core.rs  ffi_messages.rs  ffi_rpc.rs  lib.rs  messages.rs
wasm_test_app/: Cargo.toml  README.md  Trunk.toml  index.html
wasm_test_app/.cargo/: config.toml
wasm_test_app/src/: bluetooth_page.rs  lib.rs
ws_gateway/: Cargo.toml
ws_gateway/src/: client.rs  common.rs  gateway.rs  main.rs  serialization.rs  server.rs  util.rs
