[workspace]
resolver = "2"
members = [
    "ractor_wormhole",
    "ractor_wormhole_derive",
    "ractor_wormhole_tests",

    "sample_app",

    "chat_app/client",
    "chat_app/server",
    "chat_app/shared",
    "chat_app/wasm_client",
    "chat_app/wasm_server"
]


[patch.crates-io]
#tokio = { git = "https://github.com/0x53A/tokio", branch = "reentrant-current-thread-executor" }
#ractor = { git = "https://github.com/0x53A/ractor", branch = "dev" }


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
#strip = true