[package]
name = "ractor_wormhole"
version = "0.1.0"
edition = "2024"

[dependencies]
ractor_wormhole_derive = { path = "../ractor_wormhole_derive" }

ractor = { version = "0.15", features = [] }
ractor_cluster_derive = { version = "0.15", optional = true }

# note: the introduction is json serialized
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = [
    #"rt-multi-thread",
    #"net",
    #"time",
    #"macros",
    #"sync"
]}
tokio-tungstenite = { version = "0.28", optional = true }
tungstenite = { version = "0.28", optional = true }
russh = { version = "0.56", optional = true }
russh-keys = { version = "0.49", optional = true }

anyhow = { version = "1.0", features = ["backtrace"] }
bincode = { version = "=2.0", features = [] }
futures = "0.3"
log = "0.4"
tracing = "0.1"
rand = "0.9"
uuid = { version = "1.19", features = ["rng", "v4"] }
static_assertions = "1.1"
async-trait = "0.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
ewebsock = { version = "0.8", features = ["tls"], optional = true }
tokio_with_wasm = "0.8"

[features]
default = ["derive", "ssh_client"]
ractor_cluster = ["ractor_cluster_derive", "ractor/cluster"]
derive = []
serde = []
bincode = []
websocket_client = ["tungstenite", "tokio-tungstenite", "tokio-tungstenite/native-tls" ]
websocket_client_wasm = ["ewebsock" ]
websocket_server = ["tungstenite", "tokio-tungstenite"]
unix_socket_client = ["tokio/net", "tokio/io-util"]
unix_socket_server = ["tokio/net", "tokio/io-util"]
ssh_client = ["russh", "russh-keys", "tokio/io-util"]
async-trait = ["ractor/async-trait"]
