[package]
name = "ractor_wormhole_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
ractor_wormhole = { path = "../ractor_wormhole" }
ractor = { version = "0.15", features = [] }
ractor_cluster_derive = { version = "0.15", optional = true }
anyhow = { version = "1.0", features = ["backtrace"] }
tokio = { version = "1.49", features = [] }
futures = "0.3"
async-trait = "0.1"
serde_json = "1.0"

[features]
default = []
ractor_cluster = [ "ractor_wormhole/ractor_cluster", "ractor_cluster_derive", "ractor/cluster"]
async-trait = ["ractor_wormhole/async-trait"]
