[package]
name = "ractor_wormhole_sample_app"
version = "0.1.0"
edition = "2024"

[dependencies]
ractor_wormhole = { path = "../ractor_wormhole", features = [ "websocket_client", "websocket_server" ] }

clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
ractor = { version = "0.15.8", features = [] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = { version = "1.0.99", features = ["backtrace"] }

[features]
async-trait = ["ractor_wormhole/async-trait"]
