[package]
name = "ractor_wormhole_sample_app"
version = "0.1.0"
edition = "2024"

[dependencies]
ractor_wormhole = { path = "../ractor_wormhole", features = [ ] }

clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
ractor = { version = "0.15", features = [] }
tokio = { version = "1.49", features = ["full"] }
anyhow = { version = "1.0", features = ["backtrace"] }

[features]
default = ["websocket"]

async-trait = ["ractor_wormhole/async-trait"]

websocket = [ "ractor_wormhole/websocket_client", "ractor_wormhole/websocket_server" ]
unix_socket = [ "ractor_wormhole/unix_socket_client", "ractor_wormhole/unix_socket_server" ]
ssh = [ "ractor_wormhole/ssh_client" ]
