[package]
name = "wasm_test_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ractor_wormhole = { path = "../ractor_wormhole" }
ractor = "0.15.8"
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console", 
    "Window", 
    "Document", 
    "HtmlElement", 
    "Element",
    "HtmlButtonElement",
    "Navigator",
    "Bluetooth",
    "BluetoothDevice",
    "BluetoothLeScanFilterInit",
    "BluetoothRemoteGattCharacteristic",
    "BluetoothRemoteGattServer",
    "BluetoothRemoteGattService",
    "BluetoothCharacteristicProperties",
    "RequestDeviceOptions",
] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
js-sys = "0.3"
tokio = { version = "1.47.1", features = [] }
tokio_with_wasm = "0.8.7"
async-trait = "0.1"
uuid = { version = "1.18.1", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true

[features]
async-trait = ["ractor_wormhole/async-trait"]

