[package]
name = "ws_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = [ "tokio", "http1", "http2" ] }
bytes = "1.10.1"
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
ractor = { version = "0.15.2", features = ["async-trait", "cluster"] }
ractor_cluster_derive = { version = "0.15.2" }
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tower-http = { version = "0.6.2", features = [ "trace" ] }
tracing = "0.1.41"
tracing-glog = "0.4.0"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
tungstenite = "0.26.2"
url = "2.5.4"
uuid = { version = "1.16.0", features = ["rng", "v4"] }


[patch.crates-io]
#ractor = { git = "https://github.com/Officeyutong/ractor", branch = "support-for-wasm-in-browser" }
#ractor_cluster_derive = { git = "https://github.com/Officeyutong/ractor", branch = "support-for-wasm-in-browser" }