[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
ractor_wormhole = { path = "../../ractor_wormhole", features = ["websocket_client"] }
shared = { path = "../shared" }
clap = { version = "4.5.52", features = ["derive"] }
env_logger = "0.11.8"
ractor = { version = "0.15.8", features = [] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = { version = "1.0.100", features = ["backtrace"] }
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
color-eyre = "0.6.5"
futures-util = "0.3.31"

[features]
async-trait = ["ractor_wormhole/async-trait"]
