[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
ractor_wormhole = { path = "../../ractor_wormhole", features = ["websocket_client"] }
shared = { path = "../shared" }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
ractor = { version = "0.15", features = [] }
tokio = { version = "1.49", features = ["full"] }
anyhow = { version = "1.0", features = ["backtrace"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
color-eyre = "0.6"
futures-util = "0.3"

[features]
async-trait = ["ractor_wormhole/async-trait"]
