[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
ractor_wormhole = { path = "../../ractor_wormhole", features = ["websocket_server"] }
shared = { path = "../shared" }
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.8"
ractor = { version = "0.15.3", features = ["async-trait"] }
tokio = { version = "1.44.1", features = ["full"] }
anyhow = { version = "1.0.97", features = ["backtrace"] }
rand = "0.9.0"
static_assertions = "1.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["full"] }
hyper-tungstenite = "0.17.0"
http-body-util = "0.1.3"
