[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
ractor_wormhole = { path = "../../ractor_wormhole", features = ["websocket_server"] }
shared = { path = "../shared" }
clap = { version = "4.5.52", features = ["derive"] }
env_logger = "0.11.8"
ractor = { version = "0.15.8", features = [] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = { version = "1.0.100", features = ["backtrace"] }
rand = "0.9.2"
static_assertions = "1.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["full"] }
hyper-tungstenite = "0.19.0"
http-body-util = "0.1.3"

[features]
async-trait = ["ractor_wormhole/async-trait"]
