[package]
name = "wasm_client"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
eframe = { version = "0.31.1", features = ["default_fonts", "glow", "persistence"] }
egui = "0.31.1"
env_logger = "0.11.8"
log = "0.4.27"
ractor = "0.15.6"
ractor_wormhole = { path = "../../ractor_wormhole", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
tokio = { version = "1.45.0", features = [ ] }
tokio_with_wasm = "0.8.5"
anyhow = "1.0.98"
futures-util = "0.3.31"
futures = "0.3.31"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
uuid = { version = "1.16.0", features = ["js"] }
async-trait = "0.1.88"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.45.0", features = [ "rt", "rt-multi-thread" ] }
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
#tungstenite = { version = "0.26.2", features = [] }
ractor_wormhole = { path = "../../ractor_wormhole", features = ["websocket_client"] }


[features]
async-trait = ["ractor_wormhole/async-trait"]
