[package]
name = "wasm_client"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
eframe = { version = "0.32.3", features = ["default_fonts", "glow", "persistence"] }
egui = "0.32.3"
env_logger = "0.11.8"
log = "0.4.28"
ractor = "0.15.8"
ractor_wormhole = { path = "../../ractor_wormhole", features = [] }
serde = { version = "1.0.225", features = ["derive"] }
wasm-bindgen-futures = "0.4.53"
web-sys = "0.3.80"
tokio = { version = "1.47.1", features = [ ] }
tokio_with_wasm = "0.8.7"
anyhow = "1.0.99"
futures-util = "0.3.31"
futures = "0.3.31"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
uuid = { version = "1.18.1", features = ["js"] }
async-trait = "0.1.89"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", features = [ "rt", "rt-multi-thread" ] }
clap = { version = "4.5.47", features = ["derive"] }
color-eyre = "0.6.5"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
#tungstenite = { version = "0.26.2", features = [] }
ractor_wormhole = { path = "../../ractor_wormhole", features = ["websocket_client"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
ractor_wormhole = { path = "../../ractor_wormhole", features = ["websocket_client_wasm"] }

[features]
async-trait = ["ractor_wormhole/async-trait"]
