[package]
name = "wasm_client"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
eframe = { version = "0.33", features = ["default_fonts", "glow", "persistence"] }
egui = "0.33"
env_logger = "0.11"
log = "0.4"
ractor = "0.15"
ractor_wormhole = { path = "../../ractor_wormhole", features = [] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
tokio = { version = "1.47", features = [ ] }
tokio_with_wasm = "0.8"
anyhow = "1.0"
futures-util = "0.3"
futures = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.19", features = ["js"] }
async-trait = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47", features = [ "rt", "rt-multi-thread" ] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
#tungstenite = { version = "0.26.2", features = [] }
ractor_wormhole = { path = "../../ractor_wormhole", features = ["websocket_client"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
ractor_wormhole = { path = "../../ractor_wormhole", features = ["websocket_client_wasm"] }

[features]
async-trait = ["ractor_wormhole/async-trait"]
