[package]
name = "wasm_server"
version = "0.1.0"
edition = "2024"

[dependencies]
ractor_wormhole = { path = "../../ractor_wormhole", features = ["websocket_server"] }
shared = { path = "../shared" }
server = { path = "../server" }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
ractor = { version = "0.15", features = [] }
tokio = { version = "1.49", features = ["full"] }
anyhow = { version = "1.0", features = ["backtrace"] }
rand = "0.9"
static_assertions = "1.1"
futures = "0.3"
futures-util = "0.3"
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tungstenite = "0.19"
http-body-util = "0.1"
rust-embed = "8.11"
log = "0.4"
tracing = "0.1"

[features]
async-trait = ["ractor_wormhole/async-trait"]
